--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ description: "Every failure is leading towards success."
 keyword: "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Apple, iPhone"
 url: "http://comvn.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/comvn/comvn.github.io.git" # you code repository
+#github_repo: "https://github.com/comvn/comvn.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/app/avatar.gif      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
