--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-img: img/post-bg-desk.jpg
 email: 
 description: "Every failure is leading towards success."
 keyword: "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Apple, iPhone"
-url: "http://comvn.github.io"          # your host, for absolute URL
+url: "https://www.nguyenda.com"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 #github_repo: "https://github.com/comvn/comvn.github.io.git" # you code repository
 
