--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: NDA
 title-home: NDA Blog
 SEOTitle: NDA Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/bg/monterey.jpg
 email: 
 description: "Every failure is leading towards success."
 keyword: "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Android, iPhone"
