--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
 # Site settings
-title: NDA
+title:      NDA
 title-home: NDA Blog
-SEOTitle: NDA Blog
+SEOTitle:   NDA Blog
 header-img: img/bg/monterey.jpg
 email: 
 description: "Keep it simple do it well."
-keyword: "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Android, iPhone"
-url: "https://www.nguyenda.com"          # your host, for absolute URL
-baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+keyword:    "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Android, iPhone"
+url:        "https://www.nguyenda.com"          # your host, for absolute URL
+baseurl:    ""      # for example, '/blog' if your blog hosted on 'host/blog'
+ribbon:     true
 #github_repo: "https://github.com/comvn/comvn.github.io.git" # you code repository
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+sidebar:    true                           # whether or not using Sidebar.
 sidebar-about-description: "Keep It Simple Do It Well"
 sidebar-avatar: /img/app/programer.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
