--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ SEOTitle:   NDA Blog
 header-img: img/bg/monterey.jpg
 email: 
 description: "Keep it simple do it well."
-keyword:    "NDA, NDA Blog, Software, Development, SA, QA, Agile, System, Mobile, iOS, Android, iPhone"
+keyword:    "nguyenda, nguyenda.com, NDA, NDA Blog, Software, Development, SA, QA, Agile, System"
 url:        "https://www.nguyenda.com"          # your host, for absolute URL
 baseurl:    ""      # for example, '/blog' if your blog hosted on 'host/blog'
 ribbon:     true
